--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
     <link rel="icon" href="assets/logo-MineCart.png">
 
     <link rel="stylesheet" href="css/style.css">
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <!-- <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&family=Press+Start+2P&display=swap"
         rel="stylesheet">
 </head>
@@ -75,17 +73,27 @@
 
                 <nav class="header-main-nav">
                     <ul>
-                        <li><a href="#recommended" data-translate-key="recommended-title">Rekomendasi</a></li>
-                        <li><a href="index.html" class="active" data-translate-key="home-title">Beranda</a></li>
-                        <li><a href="html/products.html" data-translate-key="all-products-title">Semua Produk</a>
-                        </li>
+                        <li class="mobile-only mobile-only-logged-out"><a href="html/login.html"
+                                data-translate-key="login">Masuk</a></li>
+                        <li class="mobile-only mobile-only-logged-out"><a href="html/register.html"
+                                data-translate-key="register">Daftar</a></li>
+
+                        <li class="mobile-only mobile-only-logged-in"><a href="account.html"
+                                data-translate-key="my-account">My Account</a></li>
+                        <li class="mobile-only mobile-only-logged-in"><a href="#" id="logout-btn-mobile"
+                                data-translate-key="logout">Logout</a></li>
+
+                        <li><a href="index.html" data-translate-key="home-title">Beranda</a></li>
+                        <li><a href="html/products.html" data-translate-key="all-products-title">Semua Produk</a></li>
+
                         <li class="mobile-only"><a href="html/about.html" data-translate-key="about-us-title">Tentang
                                 Kami</a></li>
                         <li class="mobile-only"><a href="html/help.html" data-translate-key="help-title">Bantuan</a>
                         </li>
+
                         <li class="cart-icon-wrapper">
                             <a href="html/cart.html" title="Keranjang Belanja" data-translate-key="cart-link-title">
-                                <img src="assets/logo-keranjang-gelap.png" alt="Keranjang" class="icon-nav"
+                                <img src="../assets/logo-keranjang-gelap.png" alt="Keranjang" class="icon-nav"
                                     id="cart-icon-img">
                                 <span id="cart-counter" class="cart-counter">0</span>
                             </a>
@@ -93,10 +101,12 @@
                         <li>
                             <button id="theme-toggle-btn" class="theme-button" title="Ubah Tema"
                                 data-translate-key="theme-toggle-title">
-                                <img id="theme-icon" src="assets/logo-gelap.png" alt="Tema"
+                                <img id="theme-icon" src="../assets/logo-gelap.png" alt="Tema"
                                     data-translate-key="theme-link-title">
                             </button>
                         </li>
+
+                        <li id="mobile-lang-switcher" class="mobile-only"><a href="#"></a></li>
                     </ul>
                 </nav>
 
@@ -137,7 +147,7 @@
 
         <section class="featured-products" id="recommended">
             <div class="container">
-                <h2 data-translate-key="featured-title">Produk Rekomendasi</h2>
+                <h2 class="rekom-mobile" data-translate-key="featured-title">Produk Rekomendasi</h2>
                 <div class="product-grid">
                 </div>
                 <div class="see-more-container">
@@ -153,7 +163,7 @@
                 Hutabarat. Semua hak cipta dilindungi.</p>
         </div>
     </footer>
-
+    <div id="toast-container"></div>
     <script src="js/script.js"></script>
 </body>
 
