--- a/html/register.html
+++ b/html/register.html
@@ -9,103 +9,12 @@
     <link rel="stylesheet" href="../css/style.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&family=Press+Start+2P&display=swap"
         rel="stylesheet">
-    <style>
-        /* Styling khusus untuk halaman login/register (bisa disalin dari login.html) */
-        .auth-container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 80vh;
-            padding: 20px;
-            background-color: var(--bg-color);
-        }
-
-        .auth-box {
-            background-color: var(--light-color);
-            padding: 40px;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            width: 100%;
-            max-width: 400px;
-            text-align: center;
-        }
-
-        .auth-box h2 {
-            font-family: var(--font-heading);
-            margin-bottom: 30px;
-            color: var(--dark-color);
-            font-size: 2rem;
-        }
-
-        .form-group {
-            margin-bottom: 20px;
-            text-align: left;
-        }
-
-        .form-group label {
-            display: block;
-            margin-bottom: 8px;
-            font-weight: 500;
-            color: var(--dark-color);
-        }
-
-        .form-group input[type="text"],
-        .form-group input[type="password"],
-        .form-group input[type="email"] {
-            width: 100%;
-            padding: 12px;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-            font-size: 1rem;
-            box-sizing: border-box;
-        }
-
-        .form-group input[type="text"]:focus,
-        .form-group input[type="password"]:focus,
-        .form-group input[type="email"]:focus {
-            border-color: var(--primary-color);
-            outline: none;
-        }
-
-        .auth-button {
-            background-color: var(--primary-color);
-            color: var(--light-color);
-            padding: 12px 25px;
-            border: none;
-            border-radius: 5px;
-            font-size: 1.1rem;
-            cursor: pointer;
-            transition: background-color 0.2s ease;
-            width: 100%;
-        }
-
-        .auth-button:hover {
-            background-color: #2574A9;
-        }
-
-        .switch-auth {
-            margin-top: 20px;
-            font-size: 0.9rem;
-            color: var(--dark-color);
-        }
-
-        .switch-auth a {
-            color: var(--primary-color);
-            text-decoration: none;
-            font-weight: 500;
-        }
-
-        .switch-auth a:hover {
-            text-decoration: underline;
-        }
-    </style>
 </head>
 
 <body>
-    <header>
+    < <header>
         <div class="header-top">
             <div class="container">
                 <div class="social-media">
@@ -162,11 +71,23 @@
 
                 <nav class="header-main-nav">
                     <ul>
+                        <li class="mobile-only mobile-only-logged-out"><a href="login.html"
+                                data-translate-key="login">Masuk</a></li>
+                        <li class="mobile-only mobile-only-logged-out"><a href="register.html"
+                                data-translate-key="register">Daftar</a></li>
+
+                        <li class="mobile-only mobile-only-logged-in"><a href="account.html"
+                                data-translate-key="my-account">Akun Saya</a></li>
+                        <li class="mobile-only mobile-only-logged-in"><a href="#" id="logout-btn-mobile"
+                                data-translate-key="logout">Keluar</a></li>
+
                         <li><a href="../index.html" data-translate-key="home-title">Beranda</a></li>
                         <li><a href="products.html" data-translate-key="all-products-title">Semua Produk</a></li>
+
                         <li class="mobile-only"><a href="about.html" data-translate-key="about-us-title">Tentang
                                 Kami</a></li>
                         <li class="mobile-only"><a href="help.html" data-translate-key="help-title">Bantuan</a></li>
+
                         <li class="cart-icon-wrapper">
                             <a href="cart.html" title="Keranjang Belanja" data-translate-key="cart-link-title">
                                 <img src="../assets/logo-keranjang-gelap.png" alt="Keranjang" class="icon-nav"
@@ -177,83 +98,80 @@
                         <li>
                             <button id="theme-toggle-btn" class="theme-button" title="Ubah Tema"
                                 data-translate-key="theme-toggle-title">
-                                <img id="theme-icon" src="../assets/logo-gelap.png" alt="Tema">
+                                <img id="theme-icon" src="../assets/logo-gelap.png" alt="Tema"
+                                    data-translate-key="theme-link-title">
                             </button>
                         </li>
+
+                        <li id="mobile-lang-switcher" class="mobile-only"><a href="#"></a></li>
                     </ul>
                 </nav>
 
                 <button class="search-toggle-btn" aria-label="Buka Pencarian">
                     <img src="assets/logo-search.png" alt="Ikon Cari">
                 </button>
+
             </div>
         </div>
-    </header>
+        </header>
 
-    <main>
-        <section class="auth-container">
-            <div class="auth-box">
-                <h2 data-translate-key="register-header">Daftar Akun Baru</h2>
-                <form id="register-form">
+        <main>
+            <div class="auth-container">
+                <form id="register-form" class="auth-form" novalidate>
+                    <h1 data-translate-key="register-title">Daftar Akun Baru</h1>
+
                     <div class="form-group">
-                        <label for="register-username">Username</label>
-                        <input type="text" id="register-username" name="username" required>
+                        <label for="username" data-translate-key="label-username">Nama Pengguna</label>
+                        <input type="text" id="username" name="username" required>
                     </div>
+
                     <div class="form-group">
-                        <label for="register-email">Email</label>
-                        <input type="email" id="register-email" name="email" required>
+                        <label for="email" data-translate-key="label-email">Email</label>
+                        <input type="email" id="email" name="email" required>
                     </div>
+
                     <div class="form-group">
-                        <label for="register-password">Password</label>
-                        <input type="password" id="register-password" name="password" required>
+                        <label for="password" data-translate-key="label-password">Password</label>
+                        <input type="password" id="password" name="password" required minlength="6">
                     </div>
+
                     <div class="form-group">
-                        <label for="register-confirm-password">Konfirmasi Password</label>
-                        <input type="password" id="register-confirm-password" name="confirmPassword" required>
+                        <label for="dob" data-translate-key="label-dob">Tanggal Lahir</label>
+                        <input type="date" id="dob" name="dob" required>
                     </div>
-                    <button type="submit" class="auth-button">Daftar</button>
+
+                    <div class="form-group">
+                        <label data-translate-key="label-gender">Jenis Kelamin</label>
+                        <div class="radio-container">
+                            <div class="radio-option">
+                                <input type="radio" id="male" name="gender" value="Pria" required>
+                                <label for="male" data-translate-key="gender-male">Pria</label>
+                            </div>
+                            <div class="radio-option">
+                                <input type="radio" id="female" name="gender" value="Wanita" required>
+                                <label for="female" data-translate-key="gender-female">Wanita</label>
+                            </div>
+                        </div>
+                    </div>
+
+                    <button type="submit" class="cta-button" data-translate-key="btn-register">Daftar</button>
+                    <p class="auth-switch">
+                        <span data-translate-key="auth-switch-text-login">Sudah punya akun? </span>
+                        <a href="login.html" data-translate-key="auth-switch-link-login">Masuk di sini</a>
+                    </p>
                 </form>
-                <div class="switch-auth">
-                    Sudah punya akun? <a href="login.html">Masuk di sini</a>
-                </div>
             </div>
-        </section>
-    </main>
+        </main>
 
-    <footer>
-        <div class="container">
-            <p>&copy; 2025 Toko Anda. Hak Cipta Dilindungi.</p>
-        </div>
-    </footer>
+        <footer>
+            <div class="container">
+                <p data-translate-key="footer-title">&copy; 2025 MineCart. Dibuat oleh Pangeran Valerensco Rivaldi
+                    Hutabarat. Semua hak cipta dilindungi.</p>
+            </div>
+        </footer>
 
-    <script src="../js/script.js"></script>
-    <script>
-        // JavaScript sementara untuk menangani registrasi (hanya simulasi)
-        document.getElementById('register-form').addEventListener('submit', function (e) {
-            e.preventDefault(); // Mencegah form submit
-            const username = document.getElementById('register-username').value;
-            const email = document.getElementById('register-email').value;
-            const password = document.getElementById('register-password').value;
-            const confirmPassword = document.getElementById('register-confirm-password').value;
-
-            if (password !== confirmPassword) {
-                alert('Konfirmasi password tidak cocok!');
-                return;
-            }
-
-            // Di sini Anda akan mengirim data ke server untuk proses registrasi
-            // Untuk simulasi, kita anggap registrasi berhasil
-            if (username && email && password) {
-                // Setelah registrasi berhasil, bisa langsung login otomatis
-                localStorage.setItem('isLoggedIn', 'true');
-                localStorage.setItem('username', username);
-                alert('Registrasi Berhasil! Selamat datang, ' + username);
-                window.location.href = '../index.html'; // Kembali ke halaman utama
-            } else {
-                alert('Mohon lengkapi semua kolom.');
-            }
-        });
-    </script>
+        <div id="toast-container"></div>
+        <script src="../js/script.js"></script>
 </body>
 
 </html>
