--- a/html/about.html
+++ b/html/about.html
@@ -109,7 +109,7 @@
                 </nav>
 
                 <button class="search-toggle-btn" aria-label="Buka Pencarian">
-                    <img src="assets/logo-search.png" alt="Ikon Cari">
+                    <img src="../assets/logo-search.png" alt="Ikon Cari">
                 </button>
 
             </div>
@@ -122,22 +122,36 @@
 
             <div class="about-layout">
                 <div class="about-text">
-                    <h2>Selamat Datang di MineCart!</h2>
-                    <p>
-                        MineCart lahir dari kecintaan kami terhadap dunia game dan keinginan untuk menyediakan
+                    <h2 data-translate-key="about-welcome-title">Selamat Datang di MineCart!</h2>
+                    <p data-translate-key="about-p1">
+                        MineCart lahir dari kecintaan kami terhadap dunia MineCraft dan keinginan untuk menyediakan
                         produk-produk berkualitas bagi para gamer dan penggemar budaya pop. Kami percaya bahwa setiap
                         orang berhak mengekspresikan gayanya, dan kami di sini untuk membantu mewujudkannya.
                     </p>
-                    <h3>Misi Kami</h3>
-                    <p>
+                    <h3 data-translate-key="about-mission-title">Misi Kami</h3>
+                    <p data-translate-key="about-p2">
                         Misi kami adalah menjadi "peti harta karun" utama Anda untuk semua kebutuhan gaya hidup modern.
                         Kami memilih setiap item dengan cermat, memastikan Anda mendapatkan produk terbaik yang unik dan
-                        berkarakter, sama seperti di dalam game favorit Anda. Selamat menelusuri dan "Craft Your Style!"
+                        berkarakter. Selamat menelusuri dan "Craft Your Style!"
                     </p>
                 </div>
-                <div class="about-image">
-                    <img src="https://placehold.co/600x400/181A1B/3DCEC4?text=MineCart+HQ" alt="Tentang MineCart">
+                <div class="about-image-text">
+                    <h2 data-translate-key="about-hq-title">MineCart HQ</h2>
                 </div>
+            </div>
+
+            <div class="dev-tribute">
+                <p data-translate-key="dev-praise-1">DIVDIK BAIK</p>
+                <p data-translate-key="dev-praise-2">DIVDIK GANTENG & CANTIK</p>
+                <p data-translate-key="dev-praise-3">DIVDIK BAIK HATI</p>
+            </div>
+
+            <div class="thank-you-note">
+                <p data-translate-key="thank-you-note-a"> Terima kasih kami ucapkan kepada Divisi Pendidikan yang dengan
+                    sabar mengajari dan menghadapi kami.</p>
+                <p data-translate-key="thank-you-note-b"> Terkhusus juga Kepada Teh Mora Fidela, Instruktur terbaik
+                    kami.
+                </p>
             </div>
         </div>
     </main>
