--- a/html/products.html
+++ b/html/products.html
@@ -84,7 +84,7 @@
                                 data-translate-key="logout">Keluar</a></li>
 
                         <li><a href="../index.html" data-translate-key="home-title">Beranda</a></li>
-                        <li><a href="products.html" data-translate-key="all-products-title">Semua Produk</a></li>
+                        <li><a href="products.html" data-translate-key="all-products-title" class="active">Semua Produk</a></li>
 
                         <li class="mobile-only"><a href="about.html" data-translate-key="about-us-title">Tentang
                                 Kami</a></li>
@@ -110,7 +110,7 @@
                 </nav>
 
                 <button class="search-toggle-btn" aria-label="Buka Pencarian">
-                    <img src="assets/logo-search.png" alt="Ikon Cari">
+                    <img src="../assets/logo-search.png" alt="Ikon Cari">
                 </button>
 
             </div>
