--- a/html/register.html
+++ b/html/register.html
@@ -108,7 +108,7 @@
                 </nav>
 
                 <button class="search-toggle-btn" aria-label="Buka Pencarian">
-                    <img src="assets/logo-search.png" alt="Ikon Cari">
+                    <img src="../assets/logo-search.png" alt="Ikon Cari">
                 </button>
 
             </div>
