--- a/index.html
+++ b/index.html
@@ -78,12 +78,12 @@
                         <li class="mobile-only mobile-only-logged-out"><a href="html/register.html"
                                 data-translate-key="register">Daftar</a></li>
 
-                        <li class="mobile-only mobile-only-logged-in"><a href="account.html"
+                        <li class="mobile-only mobile-only-logged-in"><a href="html/account.html"
                                 data-translate-key="my-account">My Account</a></li>
                         <li class="mobile-only mobile-only-logged-in"><a href="#" id="logout-btn-mobile"
                                 data-translate-key="logout">Logout</a></li>
 
-                        <li><a href="index.html" data-translate-key="home-title">Beranda</a></li>
+                        <li><a href="index.html" data-translate-key="home-title" class="active">Beranda</a></li>
                         <li><a href="html/products.html" data-translate-key="all-products-title">Semua Produk</a></li>
 
                         <li class="mobile-only"><a href="html/about.html" data-translate-key="about-us-title">Tentang
@@ -105,8 +105,8 @@
                                     data-translate-key="theme-link-title">
                             </button>
                         </li>
-
                         <li id="mobile-lang-switcher" class="mobile-only"><a href="#"></a></li>
+
                     </ul>
                 </nav>
 
@@ -155,6 +155,17 @@
                 </div>
             </div>
         </section>
+        <div id="cs-popup" class="cs-popup hidden-element">
+            <div class="cs-popup-header">
+                <h3 data-translate-key="cs-title">Customer Service</h3>
+                <button class="close-btn" aria-label="Tutup pop-up">x</button>
+            </div>
+            <div class="cs-popup-body">
+                <p data-translate-key="cs-welcome">Selamat datang di MineCart Web! Temukan berbagai produk berkualitas
+                    tinggi dengan harga terbaik.</p>
+                <p>DIVDIK BAIK, DIVDIK GANTENG DAN CANTIK, DIVDIK BAIK HATI</p>
+            </div>
+        </div>
     </main>
 
     <footer>
